removes unwanted kickstarter line and adds hover hand on images

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -72,9 +72,6 @@
             <p>
                 We're a small indie studio and need your help to bring our passion project to life. Kickstarter will allow us to overcome the final hurdle and share our game with the world.
                 <span>
-                    The game is 80% complete and the last 20% stretch is the hardest to cross without support from Kickstarter to bring us home.
-                </span>
-                <span>
                     We have been funding the project out of our own pocket for some time, and it is becoming increasingly difficult for us to keep up
 				with the expenses.
                 </span>
@@ -189,44 +186,44 @@
             <h3>Screenshots</h3>
             <div class="images-wrapper">
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="0">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="0" href="">
                         <img src="{% static "/app/assets/screenshots/ss1-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="1">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="1" href="">
                         <img src="{% static "/app/assets/screenshots/ss2-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="2">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="2" href="">
                         <img src="{% static "/app/assets/screenshots/ss3-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="3">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="3" href="">
                         <img src="{% static "/app/assets/screenshots/ss4-low.png" %}" alt="">
                     </a>
                 </div>
             </div>
             <div class="images-wrapper">
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="4">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="4" href="">
                         <img src="{% static "/app/assets/screenshots/ss5-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="5">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="5" href="">
                         <img src="{% static "/app/assets/screenshots/ss6-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="6">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="6" href="">
                         <img src="{% static "/app/assets/screenshots/ss7-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="7">
+                    <a data-bs-toggle="modal" data-bs-target="#screenshot-carousel-modal" data-bs-slide-to="7" href="">
                         <img src="{% static "/app/assets/screenshots/ss8-low.png" %}" alt="">
                     </a>
                 </div>
@@ -236,44 +233,44 @@
             <h3>Artworks</h3>
             <div class="images-wrapper">
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="0">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="0" href="">
                         <img src="{% static "/app/assets/artworks/aa1-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="1">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="1" href="">
                         <img src="{% static "/app/assets/artworks/aa2-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="2">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="2" href="">
                         <img src="{% static "/app/assets/artworks/aa3-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="3">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="3" href="">
                         <img src="{% static "/app/assets/artworks/aa4-low.png" %}" alt="">
                     </a>
                 </div>
             </div>
             <div class="images-wrapper">
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="4">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="4" href="">
                         <img src="{% static "/app/assets/artworks/aa5-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="5">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="5" href="">
                         <img src="{% static "/app/assets/artworks/aa6-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="6">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="6" href="">
                         <img src="{% static "/app/assets/artworks/aa7-low.png" %}" alt="">
                     </a>
                 </div>
                 <div class="image">
-                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="7">
+                    <a data-bs-toggle="modal" data-bs-target="#artwork-carousel-modal" data-bs-slide-to="7" href="">
                         <img width="179px" src="{% static "/app/assets/artworks/aa8-low.png" %}" alt="">
                     </a>
                 </div>
